k8-deployment/ingress/deployment.yaml
apiVersion: apps/v1
kind: Deployment  
metadata:
  name: blog-deployment-ingress
spec:
  replicas: 2
  selector: 
    matchLabels: 
      app: blog-ingress
  template:
    metadata:
      name: blog-pod
      labels:
        app: blog-ingress
    spec:
      containers:
        - name: blog-ingress-container
          image: mydeendevops369/blog:latest
          ports: 
            - containerPort: 80
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: blog-ingress-service
  labels:
    app: blog-ingress
spec:
  type: NodePort
  selector:
    app: blog-ingress
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30083
